2010-06-05  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:   Fix for #3008307: make callerPtr chains
	* generic/tclExecute.c: be traversable accross coro
	boundaries. Add the special coroutine CallFrame (partially
	reverting commit of 2009-12-10), as it is needed for coroutines
	that do not push a CF - eg, those with [eval] as command. Thanks
	to Colin McCormack (coldstore) and Alexandre Ferrieux for the
	hard work on this.

2010-06-03  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>

	* generic/tclNamesp.c: Safer (and faster) computation of [uplevel]
	* tests/error.test:    offsets in TIP 348. Toplevel offsets no longer
	* tests/result.test:   overestimated.

2010-06-02  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclOO.h   BUILD_tcloo is never defined (leftover)
	* win/makefile.bc   Don't set BUILD_tcloo (leftover)
	See also entry below: 2008-06-01  Joe Mistachkin

2010-06-01  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>

	* generic/tclNamesp.c: Fix computation of [uplevel] offsets in TIP 348.
	* tests/error.test:    Only depend on callerPtr chaining now.
	* tests/result.test:   Needed for upcoming coro patch.

2010-05-31  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclVar.c         Eliminate some casts to (Tcl_HashTable *)
	* generic/tclExecute.c
	* tests/fileSystem.test    Fix filesystem-5.1 test failure on CYGWIN

2010-05-28  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclInt.h:  [tcl-Patches-3008541] order of TIP #348 fields
	in Interp structure

2010-05-28  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclCompCmdsSZ.c (IssueTryFinallyInstructions): [3007374]:
	Corrected error in handling of catch contexts to prevent crash with
	chained handlers.

	* generic/tclExecute.c (TclExecuteByteCode): Restore correct operation
	of instruction-level execution tracing (had been broken by NRE).

2010-05-27  Jan Nijtmans  <nijtmans@users.sf.net>

	* library/opt/optParse.tcl: Don't generate spaces at the end of a